# k8s-eip-operator

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  deny.toml  kuttl-test.yaml
.github/: CODEOWNERS  dependabot.yml
.github/workflows/: build.yml  pr.yml  test.yml
cilium_eip_no_masquerade_agent/: Cargo.toml
cilium_eip_no_masquerade_agent/cilium-eip-no-masquerade-agent/: Cargo.toml
cilium_eip_no_masquerade_agent/src/: main.rs
eip_operator/: Cargo.toml
eip_operator/src/: aws.rs  controller.rs  egress.rs  eip.rs  kube_ext.rs  main.rs  node.rs
eip_operator/src/controller/: egress.rs  eip.rs  node.rs  pod.rs
eip_operator_shared/: Cargo.toml
eip_operator_shared/src/: controller.rs  lib.rs
scripts/: README.md  _common.py  assert-addresses.py  assert-eips.py  assert-no-addresses.py
src/: eip.rs  main.rs
tests/integration/smoke/: 00-assert.yaml  00-install.yaml  01-assert.yaml  01-create-materialized.yaml  01-create-pod.yaml  02-assert.yaml  02-errors.yaml  02-remove-materialized.yaml  02-remove-pod.yaml
