[workspace]
resolver = "2"
members = [
    "eip_operator",
    "cilium_eip_no_masquerade_agent",
    "eip_operator_shared",
]

[workspace.package]
edition = "2021"
rust-version = "1.66.0"


# Use this section only to change the source of dependencies that might
# also appear as transitive dependencies of other external dependencies in
# the dependency graph. For everything else set the `git` sourcce
# directly in each dependency entry.
[patch.crates-io]

[workspace.dependencies]
json-patch = "1.2.0"
k8s-controller = "0.2.0"
k8s-openapi = { version = "0.19", default-features = false, features = [
    "v1_25",
] }
rand = "0.8"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "time"] }
kube = { version = "0.85.0", features = ["derive"] }
kube-runtime = "0.85.0"
tracing = "0.1"
async-trait = "0.1.74"
futures = "0.3"

eip-operator-shared = { path = "eip_operator_shared" }
# rtnetlink = "0.12.0"
rtnetlink = { git = "https://github.com/MaterializeInc/netlink.git", branch = "priority_support" }
