[workspace]
resolver = "2"
members = [
    "eip_operator",
    "cilium_eip_no_masquerade_agent",
    "eip_operator_shared",
]

[workspace.package]
edition = "2021"
rust-version = "1.83.0"


# Use this section only to change the source of dependencies that might
# also appear as transitive dependencies of other external dependencies in
# the dependency graph. For everything else set the `git` sourcce
# directly in each dependency entry.
[patch.crates-io]

[workspace.dependencies]
iptables = "0.5"
json-patch = "2.0.0"
jsonptr = "0.4.7"
k8s-controller = "0.3.0"
k8s-openapi = { version = "0.22", default-features = false, features = [
    "v1_29",
] }
netlink-packet-route = "0.17"
rand = "0.8"
rtnetlink = "0.13"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "time"] }
kube = { version = "0.92.1", default-features = false, features = ["derive", "openssl-tls"] }
kube-runtime = "0.92.1"
tracing = "0.1"
async-trait = "0.1.77"
futures = "0.3"

eip-operator-shared = { path = "eip_operator_shared" }
