[package]
name = "cilium-eip-no-masquerade-agent"
version = "0.5.0"
edition = "2021"
license = "Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = { workspace = true }
eip-operator-shared = { workspace = true }
futures = { workspace = true }
iptables = { workspace = true }
json-patch = { workspace = true }
netlink-packet-route = { workspace = true }
rand = { workspace = true }
rtnetlink = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
