[package]
name = "eip-operator"
version = "0.3.0"
edition = "2021"
license = "Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aws-config = { version = "0.101", default-features = false}
aws-sdk-ec2 = { version = "0.38", default-features = false, features = [ "rt-tokio" ] }
aws-sdk-servicequotas = { version = "1.21", default-features = false, features = [ "rt-tokio" ] }
aws-smithy-http = { version = "0.59", default-features = false, features = [ "rt-tokio" ] }
futures = { workspace = true }


kube = { workspace = true }
kube-runtime = { workspace = true }
rand = { workspace = true }
schemars = "0.8"
serde = "1"
serde_json = "1"
tokio = { workspace = true }
tracing = { workspace = true }

eip-operator-shared = { workspace = true }
async-trait = "0.1.77"
k8s-openapi = { workspace = true }
json-patch = { workspace = true }
k8s-controller = { workspace = true }
