[package]
name = "eip-operator"
version = "0.4.0"
edition = "2021"
license = "Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aws-config = { version = "1.5.5", default-features = false}
aws-sdk-ec2 = { version = "1.64.0", default-features = false, features = [ "rt-tokio" ] }
aws-sdk-servicequotas = { version = "1.37", default-features = false, features = [ "rt-tokio" ] }
aws-smithy-runtime-api = { version = "1", features = ["http-02x"] }
aws-smithy-runtime = { version = "1", features = ["connector-hyper-0-14-x"] }
aws-smithy-http = { version = "0.60.9", default-features = false, features = [ "rt-tokio" ] }
hyper-tls = "0.5.0"
futures = { workspace = true }

kube = { workspace = true }
kube-runtime = { workspace = true }
rand = { workspace = true }
schemars = "0.8"
serde = "1"
serde_json = "1"
tokio = { workspace = true }
tracing = { workspace = true }

eip-operator-shared = { workspace = true }
async-trait = "0.1.77"
k8s-openapi = { workspace = true }
json-patch = { workspace = true }
jsonptr = { workspace = true }
k8s-controller = { workspace = true }
