[package]
name = "eip-operator-shared"
version = "0.3.0"
edition = "2021"
license = "Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aws-sdk-ec2 = { version = "0.28", default-features = false, features = [
  "native-tls",
  "rt-tokio",
] }
aws-sdk-servicequotas = { version = "0.28", default-features = false, features = [
  "native-tls",
  "rt-tokio",
] }
aws-smithy-http = { version = "0.55", default-features = false, features = [
  "rt-tokio",
] }
futures = "0.3"
hyper = { version = "0.14.27", features = ["http2"] }
hyper-tls = { version = "0.5.0" }
kube = { workspace = true }
kube-runtime = { workspace = true }
native-tls = { version = "0.2.11", features = ["alpn"] }
opentelemetry = { version = "0.20", features = ["rt-tokio", "trace"] }
opentelemetry-otlp = { version = "0.13" }
serde = "1"
serde_json = "1"
thiserror = "1"
tokio-native-tls = { version = "0.3.1" }
tokio = { workspace = true }
tonic = { version = "0.11.0", features = ["transport"] }
tracing = "0.1"
tracing-opentelemetry = "0.20"
tracing-subscriber = { version = "0.3", features = [
  "registry",
  "env-filter",
  "json",
] }

rtnetlink = { workspace = true }
async-trait = { workspace = true }
rand = { workspace = true }
