[package]
name = "eip-operator-shared"
version = "0.4.0"
edition = "2021"
license = "Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aws-sdk-ec2 = { version = "1.64.0", default-features = false, features = [ "rt-tokio" ] }
aws-sdk-servicequotas = { version = "1.37", default-features = false, features = [ "rt-tokio" ] }
hyper-tls = { version = "0.6.0" }

futures = "0.3"
hyper = { version = "1.4.1", features = ["http2"] }
hyper-util = { version = "0.1.7", features = ["client", "client-legacy", "tokio"] }
kube = { workspace = true }
kube-runtime = { workspace = true }
native-tls = { version = "0.2.12", features = ["alpn", "vendored"] }
opentelemetry = { version = "0.24", features = ["trace"] }
opentelemetry_sdk = { version = "0.24.1", features = ["trace", "rt-tokio"] }
opentelemetry-otlp = { version = "0.17" }
serde = "1"
serde_json = "1"
thiserror = "1"
tokio-native-tls = { version = "0.3.1" }
tokio = { workspace = true }
tonic = { version = "0.12.1", features = ["transport"] }
tracing = "0.1"
tracing-opentelemetry = "0.25"
tracing-subscriber = { version = "0.3", features = [
  "registry",
  "env-filter",
  "json",
] }

rtnetlink = { workspace = true }
async-trait = { workspace = true }
rand = { workspace = true }
